Agregado de Sanctum y endpoints para register y login
